fix: add z-index to Uppy remove button and refine Choices.js padding.

--- a/src/components/Form/style/_file-input.scss
+++ b/src/components/Form/style/_file-input.scss
@@ -61,4 +61,5 @@
 
 .uppy-Dashboard-Item-action.uppy-Dashboard-Item-action--remove{
 	pointer-events: none !important;
+	z-index: 1;
 }
